# ros2-nav2-snap

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: monthly.yaml  snap.yaml
snap/: snapcraft.yaml
snap/hooks/: configure  install
snap/local/: check_is_url.sh  localization_launcher.sh  map_loader.sh  map_server.yaml  mux_select_nav_vel.sh  navigation_launcher.sh  reset_config.sh  save_map.sh  slam_launcher.sh  slam_post_stop.sh  url_management.sh
snap/local/configuration_templates/: localization_params_template.yaml  map_saver_template.yaml  slam_params_template.yaml
