<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_nav2_snap</name>
  <version>0.0.0</version>
  <description>meta package for ros2 nav2 snap dependencies</description>
  <maintainer email="canonical-robotics-brand@canonical.com">ubuntu-robotics</maintainer>
  <license>GPLv3</license>

  <exec_depend>nav2_bringup</exec_depend>

</package>

